gpt-voice commit

--- a/html/html2pdf.htm
+++ b/html/html2pdf.htm
@@ -37,6 +37,8 @@
 	<p>This is some sample content that will be captured and converted into a PDF.</p>
 </div>
 
+<button onclick="generatePDF()">Generate PDF</button>
+  
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script>
