gpt-voice commit

--- a/html/html2pdf.htm
+++ b/html/html2pdf.htm
@@ -2,7 +2,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<style>
+p{ color: blue }
+</style>
 <div class="section-to-capture">
     <h1>Sample Section1</h1>
     <pre>This is some sample content that will be captured and converted into a PDF. This is some sample content that will be captured and converted into a PDF.</pre>
